kubernetes/apps/vaultwarden/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: apps
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`vault.woitzik.dev`)
    services:
    - name: vaultwarden
      port: 80
  tls:
    secretName: wildcard-woitzik-dev-tls
